all done add prop in api

--- a/Frontend/src/app/property/add-property/add-property.component.html
+++ b/Frontend/src/app/property/add-property/add-property.component.html
@@ -238,7 +238,7 @@
                   class="form-control">
                 </div><br>
 
-                <div class="row">
+                <!-- <div class="row">
                   <div class="form-group col-6">
                     <label>Building/Flat</label>
                     
@@ -254,7 +254,7 @@
                     formControlName="villa"
                     class="form-control">
                   </div>
-                </div><br>
+                </div><br> -->
 
                 <div class="form-group col-12">
                   <button type="button" class="btn btn-primary col-12"
@@ -381,37 +381,37 @@
                 <div class="form-group col-12">
                   <label>Contact Company</label>
                   <input type="text" class="form-control"
-                  formControlName="contactCompany">
+                  formControlName="ContactCompany">
                 </div>
 
                 <div class="form-group col-12">
                   <label>Contact Name</label>
                   <input type="text" class="form-control"
-                  formControlName="contactName">
+                  formControlName="ContactName">
                 </div>
 
                 <div class="form-group col-12">
                   <label>Contact Number</label>
                   <input type="text" class="form-control"
-                  formControlName="contactNumber">
+                  formControlName="ContactNumber">
                 </div>
 
                 <div class="form-group col-12">
                   <label>Contact WhatsApp Number</label>
                   <input type="text" class="form-control"
-                  formControlName="contactNumber2">
+                  formControlName="ContactNumber2">
                 </div>
 
                 <div class="form-group col-12">
                   <label>Contact Email</label>
                   <input type="text" class="form-control"
-                  formControlName="contactEmail">
+                  formControlName="ContactEmail">
                 </div>
 
                 <div class="form-group col-12">
                   <label>Commission</label>
                   <input type="text" class="form-control"
-                  formControlName="contactCommission">
+                  formControlName="ContactCommission">
                 </div>
                 
                 <div class="form-group col-12">
