--- a/Frontend/src/app/property/property-detail/property-detail.component.html
+++ b/Frontend/src/app/property/property-detail/property-detail.component.html
@@ -349,7 +349,7 @@
             <div class="card-header">
               <strong> Commission: {{property.contactCommission}} AED </strong>
             </div>
-            <img src="https://angular-upload-files-2023-2024.s3.ap-south-1.amazonaws.com/properties2023/{{property.companyImage}}" class="card-img-top" style= "max-height: 20%;">
+            <!-- <img src="https://angular-upload-files-2023-2024.s3.ap-south-1.amazonaws.com/properties2023/{{property.companyImage}}" class="card-img-top" style= "max-height: 20%;"> -->
             <div class="card-body">
                 <p> Seller Name: {{property.contactCompany}}</p>
                 <p> Seller Name: {{property.contactName}}</p>
