--- a/Frontend/src/app/property/property-detail/property-detail.component.html
+++ b/Frontend/src/app/property/property-detail/property-detail.component.html
@@ -228,6 +228,9 @@
                         &nbsp; &nbsp; &nbsp;
                         <strong *ngIf="property.mosque"> 10 minutes walk</strong> 
                         <strong *ngIf="!property.mosque" style="color: red;"> Not Available </strong>  -->
+                        <br>
+                        <strong>Description</strong><br>
+                        {{property.description}}
                   </div>
               </div>
             </div>
