--- a/Frontend/src/app/property/property-card/property-card.component.html
+++ b/Frontend/src/app/property/property-card/property-card.component.html
@@ -14,7 +14,7 @@
 
             <div class="card-body p-1">
 
-                <h2 class="mb-0" style="color: red;"> {{property.bhk}} BHK {{property.propertyType}} </h2>
+                    <h4 class="mb-0" style="color: red;"> {{property.bhk}} Bedrooms | {{property.bathroom}} Bathrooms | {{property.propertyType}} </h4>
                 <br>
                 <h6 class="mb-0" style="color: blue;" *ngIf="deviveInfo.deviceType !== 'mobile'"> 
                     Project Name: {{property.projectName}} <br>
