--- a/Frontend/src/app/property/property-detail/property-detail.component.css
+++ b/Frontend/src/app/property/property-detail/property-detail.component.css
@@ -18,4 +18,47 @@
     min-height: 500px;
     margin-bottom: 20px;
   }
+
+  .form {
+    display: flex;
+    flex-direction: column;
+    margin-left: 150px;
+    width: 35rem;
+    gap: 1rem;
+    
+}
+
+.form1 {
+    display: flex;
+    flex-direction: column;
+    width: 20rem;
+    gap: 1rem;
+    
+}
+
+input, select, textarea {
+    padding: 1.4rem;
+    background: transparent;
+    border: 1px solid black;
+}
+
+textarea{
+    height: 5rem;
+}
+
+.button1{
+    width: 35rem;
+    padding: 1rem;
+    cursor: pointer;
+    background-color: green;
+    color: white;
+}
+
+.button2{
+    width: 20rem;
+    padding: 1rem;
+    cursor: pointer;
+    background-color: green;
+    color: white;
+}
   
