last update for all - front and back

--- a/Frontend/src/app/property/add-property/add-property.component.html
+++ b/Frontend/src/app/property/add-property/add-property.component.html
@@ -443,6 +443,7 @@
 
            </tab>
 
+          <!-- photos -->
           <tab heading="Photos">
             <div class="form-group col-12">
               <div class="photo-control">
