--- a/Frontend/src/app/property/add-property/add-property.component.html
+++ b/Frontend/src/app/property/add-property/add-property.component.html
@@ -444,13 +444,9 @@
            </tab>
 
           <!-- photos -->
-          <tab heading="Photos">
-            <div class="form-group col-12">
-              <div class="photo-control">
-                  <button class="mt-5" type="button">Upload</button> <br>
-                  This is under construction
-              </div>
-            </div>
+          <tab heading="Done">
+           
+            <h3>All done!</h3>
 
             <div class="form-group col-12">
               <button type="button" class="btn btn-primary col-12"
