--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -1,3 +1,5 @@
+@import '../node_modules/@syncfusion/ej2-material-theme/styles/material.css';
+@import '../node_modules/@syncfusion/ej2-material-theme/styles/material.css';
 @import 'assets/forms.css';
 @import 'assets/tabs.css';
 @import 'assets/bootstrap.min.css';
