--- a/Frontend/src/app/FamilyDocuments/familydocs/familydocs.component.html
+++ b/Frontend/src/app/FamilyDocuments/familydocs/familydocs.component.html
@@ -1,10 +1,14 @@
-<!-- eslint-disable @angular-eslint/template/alt-text -->
 <div class="row">
-    <div class="col-4 p-3" *ngFor="let photo of allPhotos">
-        <table>
-            <ul> 
-                <img src="{{photo.imageUrl}}" title="{{photo.publicId}}" style="width: 100%;">
-            </ul>
-        </table>
+    <div class="col-2 mb-3" *ngFor="let photo of allPhotos">
+        <img src="{{photo.imageUrl}}" alt="{{photo.publicId}}" class="img-thumbnail">
+        
+        <div class="text-center">
+            <button class="btn btn-sm btn-danger"
+            (click)="deletePhoto(photo.publicId)"><i class="fa-solid fa-trash"></i></button>
+        </div>
     </div>
-</div>
+
+    <div ng2FileDrop [uploader]="uploader" multiple class="card bg-faded p-3 text-center">
+        <i class="fa fa-upload fa-2x"></i>
+        Drop photo here!
+    </div>
