--- a/Frontend/src/app/property/photo-editor/photo-editor.component.html
+++ b/Frontend/src/app/property/photo-editor/photo-editor.component.html
@@ -13,7 +13,7 @@
         </div>
     </div>
 
-    <div ng2FileDrop [uploader]="uploader" class="card bg-faded p-3 text-center">
+    <div ng2FileDrop [uploader]="uploader" multiple class="card bg-faded p-3 text-center">
         <i class="fa fa-upload fa-2x"></i>
         Drop photo here!
     </div>
