--- a/Frontend/src/app/FamilyDocuments/familydocs/familydocs.component.html
+++ b/Frontend/src/app/FamilyDocuments/familydocs/familydocs.component.html
@@ -2,16 +2,23 @@
 
 <div class="row">
     <div class="col-2 mb-3" *ngFor="let photo of allPhotos">
-        <a href="{{photo.imageUrl}}" target=”_blank”>
+        
             <img _ngcontent-ng-c346306970="" 
             src="https://res.cloudinary.com/hspa2024/image/upload/c_thumb,h_500,w_800/{{photo.publicId}}.png"
             alt="{{photo.publicId}}"
             class="img-thumbnail" title="{{photo.publicId}}" class="img-thumbnail">
-        </a>
+        
         <div class="text-center">
-            <button class="btn btn-sm btn-danger"
+            <button class="btn btn-sm btn-danger" title="Delete"
             (click)="deletePhoto(photo.publicId)"><i class="fa-solid fa-trash"></i></button>
+            &nbsp;&nbsp;
+            <a href="{{photo.imageUrl}}" download="{{photo.imageUrl}}" target="_blank">
+                <button class="btn btn-sm btn-primary" title="Download"
+                ><i class="fa-solid fa-download"></i></button>
+            </a>
         </div>
+    
+
     </div>
 
     <div ng2FileDrop [uploader]="uploader" multiple class="card bg-faded p-3 text-center">
