--- a/Frontend/src/app/FamilyDocuments/familydocs/familydocs.component.html
+++ b/Frontend/src/app/FamilyDocuments/familydocs/familydocs.component.html
@@ -1,6 +1,6 @@
-<h3>To download a file click on it!</h3><br>
+<h3>Family Documnets</h3><br>
 
-<div class="row">
+<div  class="row">
     <div class="col-2 mb-3" *ngFor="let photo of allPhotos">
         
             <img _ngcontent-ng-c346306970="" 
@@ -25,3 +25,4 @@
         <i class="fa fa-upload fa-2x"></i>
         Drop photo here!
     </div>
+</div>
