done with family photos

--- a/Frontend/src/app/FamilyDocuments/familydocs/familydocs.component.html
+++ b/Frontend/src/app/FamilyDocuments/familydocs/familydocs.component.html
@@ -10,7 +10,7 @@
         
         <div class="text-center">
             <button class="btn btn-sm btn-danger" title="Delete"
-            (click)="deletePhoto(photo.publicId)"><i class="fa-solid fa-trash"></i></button>
+            (click)="deletePhoto(photo.imageId)"><i class="fa-solid fa-trash"></i></button>
             &nbsp;&nbsp;
             <a href="{{photo.imageUrl}}" download="{{photo.imageUrl}}" target="_blank">
                 <button class="btn btn-sm btn-primary" title="Download"
