--- a/Frontend/src/app/FamilyDocuments/familydocs/familydocs.component.html
+++ b/Frontend/src/app/FamilyDocuments/familydocs/familydocs.component.html
@@ -17,12 +17,12 @@
                 ><i class="fa-solid fa-download"></i></button>
             </a>
         </div>
-    
 
     </div>
 
-    <div ng2FileDrop [uploader]="uploader" multiple class="card bg-faded p-3 text-center">
+    <div *ngFor="let item of this.test" ng2FileDrop [uploader]="uploader" multiple class="card bg-faded p-3 text-center">
         <i class="fa fa-upload fa-2x"></i>
         Drop photo here!
+        {{item}}
     </div>
 </div>
